@startuml class_state
!theme plain
title Server State & Message Types - Class Diagram

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #FEFEFE
    BorderColor #333333
}

package "state" #E8F4FD {
    class ServerState {
        + connection: ConnectionInfo
        + users: HashMap<u32, User>
        + channels: HashMap<u32, Channel>
        + new(): Self
        + apply_user_state(state: &UserState)
        + apply_channel_state(state: &ChannelState)
        + apply_server_sync(sync: &ServerSync)
        + remove_user(session: u32)
        + remove_channel(channel_id: u32)
        + own_session(): Option<u32>
    }

    class ConnectionInfo {
        + session_id: Option<u32>
        + max_bandwidth: Option<u32>
        + welcome_text: Option<String>
    }

    class User {
        + session: u32
        + name: String
        + channel_id: u32
        + mute: bool
        + deaf: bool
        + self_mute: bool
        + self_deaf: bool
        + comment: String
        + hash: String
    }

    class Channel {
        + channel_id: u32
        + parent_id: Option<u32>
        + name: String
        + description: String
        + position: i32
        + temporary: bool
        + max_users: u32
    }

    ServerState *--> ConnectionInfo
    ServerState *--> "0..*" User : users
    ServerState *--> "0..*" Channel : channels
}

package "message" #E8F4FD {
    enum TcpMessageType {
        Version = 0
        UdpTunnel = 1
        Authenticate = 2
        Ping = 3
        Reject = 4
        ServerSync = 5
        ChannelRemove = 6
        ChannelState = 7
        UserRemove = 8
        UserState = 9
        BanList = 10
        TextMessage = 11
        PermissionDenied = 12
        Acl = 13
        QueryUsers = 14
        CryptSetup = 15
        ContextActionModify = 16
        ContextAction = 17
        UserList = 18
        VoiceTarget = 19
        PermissionQuery = 20
        CodecVersion = 21
        UserStats = 22
        RequestBlob = 23
        ServerConfig = 24
        SuggestConfig = 25
        PluginDataTransmission = 26
    }

    enum ControlMessage {
        Version(Version)
        Authenticate(Authenticate)
        Ping(Ping)
        Reject(Reject)
        ServerSync(ServerSync)
        ChannelRemove(ChannelRemove)
        ChannelState(ChannelState)
        UserRemove(UserRemove)
        UserState(UserState)
        BanList(BanList)
        TextMessage(TextMessage)
        PermissionDenied(PermissionDenied)
        CryptSetup(CryptSetup)
        VoiceTarget(VoiceTarget)
        CodecVersion(CodecVersion)
        UserStats(UserStats)
        ServerConfig(ServerConfig)
        UdpTunnel(Vec<u8>)
        ... (27 variants total)
    }

    enum UdpMessage {
        Audio(Audio)
        Ping(Ping)
    }

    enum ServerMessage {
        Control(ControlMessage)
        Udp(UdpMessage)
    }

    ServerMessage --> ControlMessage
    ServerMessage --> UdpMessage

    ControlMessage ..> TcpMessageType : identified by
}

' State is updated by control messages
ControlMessage ..> ServerState : "apply_*"

@enduml
